--- a/dashboard/upload/index.html
+++ b/dashboard/upload/index.html
@@ -35,7 +35,7 @@
       <label>Titolo</label>
       <input type="text" id="title" required>
 
-      <label>Descrizione</label>
+      <label>Descrizione (es. Targa Mezzo, Allestitore, Modello Completo)</label>
       <textarea id="description" required></textarea>
 
       <input type="file" id="inp-upl" accept="image/*">
