--- a/staff/dashboard/contactrq/index.html
+++ b/staff/dashboard/contactrq/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Richieste di Assistenza | MyFrEM - La migliore piattaforma in Friuli-Venezia Giulia nel caricamento foto inerenti l'emergenza</title>
-    <link rel="stylesheet" href="/staff/dashboard/staff.css">
-    <link rel="shortcut icon" href="https://friuliemergenze.it/assets/logo.png" type="image/x-icon">
-    <script type="module" src="/staff/dashboard/contactrq/viewrequests.js"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Richieste di Assistenza | MyFrEM - La migliore piattaforma in Friuli-Venezia Giulia nel caricamento foto
+    inerenti l'emergenza</title>
+  <link rel="stylesheet" href="/staff/dashboard/staff.css">
+  <link rel="shortcut icon" href="https://friuliemergenze.it/assets/logo.png" type="image/x-icon">
+  <script type="module" src="/staff/dashboard/contactrq/viewrequests.js"></script>
 </head>
+
 <body>
   <aside class="sidebar">
     <div class="logo">
@@ -26,24 +29,27 @@
     </nav>
     <button id="logoutBtn" class="logout">🚪 Logout</button>
   </aside>
-    <div class="main-content">
-      <h1>📞 Richieste di Assistenza</h1>
-      <table>
-        <thead>
-          <tr>
-            <th>Nome Utente</th>
-            <th>Email Utente</th>
-            <th>Oggetto</th>
-            <th>Messaggio</th>
-            <th>Stato richiesta</th>
-            <th>Data richiesta</th>
-            <th>Azioni richiesta</th>
-          </tr>
-        </thead>
-        <tbody id="contactRequestsTableBody">
-          
-        </tbody>
-      </table>
-    </div>
+  <div class="main-content">
+    <h1>📞 Richieste di Assistenza</h1>
+    <table>
+      <thead>
+        <tr>
+          <th>Nome Utente</th>
+          <th>Email Utente</th>
+          <th>Oggetto</th>
+          <th>Messaggio</th>
+          <th>Categoria</th>
+          <th>Provenienza</th>
+          <th>Stato richiesta</th>
+          <th>Data richiesta</th>
+          <th>Azioni richiesta</th>
+        </tr>
+      </thead>
+      <tbody id="contactRequestsTableBody">
+
+      </tbody>
+    </table>
+  </div>
 </body>
+
 </html>
