--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Privacy Policy - MyFrEM - La migliore in Friuli-Venezia Giulia nel caricamento foto inerenti l'emergenza</title>
+  <title>Privacy Policy - MyFrEM - Friuli Emergenze</title>
   <link rel="shortcut icon" href="https://friuliemergenze.it/assets/logo.png" type="image/x-icon">
   <style>
     :root{
@@ -20,8 +20,6 @@
       font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       background:var(--bg);
       color:var(--text);
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
       line-height:1.6;
     }
     .wrap{
@@ -29,10 +27,7 @@
       margin:40px auto;
       padding:28px;
     }
-    header{
-      text-align:left;
-      margin-bottom:18px;
-    }
+    header{margin-bottom:18px;}
     header img{width:84px; vertical-align:middle; margin-right:12px;}
     header h1{
       display:inline-block;
@@ -56,16 +51,6 @@
     a{ color:var(--accent); text-decoration:none; }
     a:hover{text-decoration:underline;}
     footer{ margin-top:22px; font-size:0.9rem; color:var(--muted); text-align:center; }
-    .btn {
-      display:inline-block;
-      background:linear-gradient(135deg,var(--accent),#00bcd4);
-      color:#fff;
-      padding:10px 18px;
-      border-radius:8px;
-      text-decoration:none;
-      font-weight:600;
-      margin-top:8px;
-    }
     @media (max-width:600px){
       .wrap{ margin:20px; padding:18px; }
       header img{ width:64px; }
@@ -78,99 +63,120 @@
     <header>
       <img src="https://friuliemergenze.it/assets/logo.png" alt="Friuli Emergenze logo" />
       <h1>Privacy Policy — MyFrEM</h1>
-      <div class="meta">Ultimo aggiornamento: <strong>21 settembre 2025</strong></div>
+      <div class="meta">Ultimo aggiornamento: <strong>14 gennaio 2026</strong></div>
     </header>
 
     <main class="card">
-      <p class="muted">Questa pagina spiega come <strong>Friuli Emergenze</strong> (di seguito “noi”) raccoglie, usa e protegge i dati personali raccolti tramite la piattaforma <strong>MyFrEM</strong> (siti e sottodomini correlati).</p>
+
+      <p class="muted">
+        Questa pagina spiega come <strong>Friuli Emergenze</strong> (di seguito “noi”) raccoglie e utilizza i dati personali
+        tramite la piattaforma <strong>MyFrEM</strong> (siti e sottodomini correlati), avvalendosi di servizi di terze parti
+        per l’erogazione tecnica del servizio.
+      </p>
 
       <h2>1. Titolare del trattamento</h2>
       <p>Il titolare del trattamento è <strong>Friuli Emergenze</strong>.</p>
       <p>
-         Email contatto privacy: <a href="mailto:privacy@friuliemergenze.it">privacy@friuliemergenze.it</a><br>
-         Referente / DPO: <em>Francesco Vio - <a href="mailto:francesco@friuliemergenze.it">francesco@friuliemergenze.it</a></em>
+        Email contatto privacy: <a href="mailto:privacy@friuliemergenze.it">privacy@friuliemergenze.it</a><br>
+        Referente: <em>Francesco Vio — <a href="mailto:francesco@friuliemergenze.it">francesco@friuliemergenze.it</a></em>
       </p>
 
       <h2>2. Ambito di applicazione</h2>
-      <p>Questa informativa si applica ai servizi erogati tramite i nostri domini / sottodomini collegati a MyFrEM, incluse le aree di autenticazione, dashboard utente e staff.</p>
+      <p>Questa informativa si applica ai servizi erogati tramite i domini e sottodomini collegati a MyFrEM, incluse le aree di autenticazione, dashboard utente e staff.</p>
 
       <h2>3. Tipologie di dati raccolti</h2>
-      <p>Raccogliamo le seguenti categorie di dati personali:</p>
       <ul>
-        <li><strong>Dati di contatto:</strong> nome, cognome, indirizzo email, username.</li>
-        <li><strong>Dati di accesso:</strong> identificativi utente, UID Firebase, timestamp di login.</li>
-        <li><strong>Dati forniti dall'utente:</strong> foto caricate, testi o commenti, preferenze.</li>
-        <li><strong>Dati tecnici:</strong> indirizzo IP (pseudonimizzato se necessario), informazioni sul dispositivo e sul browser, cookie tecnici e analitici.</li>
-        <li><strong>Dati amministrativi:</strong> informazioni utili per la gestione dell’account (ruolo, stato dell’account).</li>
+        <li><strong>Dati di contatto:</strong> nome, username, email.</li>
+        <li><strong>Dati di accesso:</strong> UID Firebase, log di autenticazione.</li>
+        <li><strong>Dati forniti dall’utente:</strong> foto caricate, testi, commenti, partecipazione ad eventi.</li>
+        <li><strong>Dati tecnici:</strong> informazioni sul browser, dispositivo, cookie tecnici e analitici.</li>
+        <li><strong>Dati amministrativi:</strong> ruolo dell’account, stato di moderazione.</li>
       </ul>
 
-      <h2>4. Finalità del trattamento e basi giuridiche</h2>
-      <p>Trattiamo i dati per le seguenti finalità:</p>
+      <h2>4. Finalità del trattamento</h2>
       <ul>
-        <li><strong>Autenticazione e gestione account</strong> — esecuzione del contratto / esecuzione di misure precontrattuali (art. 6(1)(b) GDPR).</li>
-        <li><strong>Invio email di servizio</strong> (verifica email, reset password) — esecuzione di obblighi contrattuali / interesse legittimo del titolare.</li>
-        <li><strong>Fornitura della piattaforma</strong> (visualizzare contenuti, caricare foto, partecipare ad eventi) — esecuzione del servizio richiesto dall’utente.</li>
-        <li><strong>Moderazione contenuti</strong> — adempimento di obblighi legali e legittimo interesse a mantenere la community sicura.</li>
-        <li><strong>Analisi e miglioramento del servizio</strong> — interesse legittimo (es. metriche di utilizzo, debugging).</li>
-        <li><strong>Adempimenti legali e sicurezza</strong> — obblighi di legge o requisiti normativi.</li>
+        <li>gestione dell’account e autenticazione;</li>
+        <li>utilizzo delle funzionalità della piattaforma;</li>
+        <li>moderazione dei contenuti;</li>
+        <li>miglioramento tecnico del servizio;</li>
+        <li>adempimenti legali e sicurezza.</li>
       </ul>
 
       <h2>5. Modalità del trattamento</h2>
-      <p>I dati sono trattati con strumenti elettronici e manuali, adottando misure tecniche e organizzative adeguate per garantire la sicurezza e la riservatezza (es. crittografia dei token, accessi protetti, backup sicuri).</p>
+      <p>
+        I dati sono trattati tramite strumenti informatici e servizi cloud di terze parti (es. Firebase / Google Cloud).
+        Il titolare adotta misure organizzative per ridurre i rischi, ma non ha controllo diretto sull’infrastruttura tecnica
+        dei fornitori esterni utilizzati.
+      </p>
 
       <h2>6. Conservazione dei dati</h2>
-      <p>I dati saranno conservati per il tempo necessario alle finalità per cui sono stati raccolti, in particolare:</p>
       <ul>
-        <li>Dati account: fino a cancellazione dell’account da parte dell'utente o per un periodo amministrativo successivo necessario (es. 2 anni) salvo obblighi di legge.</li>
-        <li>Dati tecnici/di log: per un periodo limitato (es. 6–24 mesi) per finalità di sicurezza e analisi.</li>
-        <li>Foto e contenuti pubblicati: fino a quando l'utente non li rimuove o fino a cancellazione da parte dello staff per violazioni.</li>
+        <li>Dati account: fino a cancellazione dell’account.</li>
+        <li>Log tecnici: per periodi limitati legati alla sicurezza.</li>
+        <li>Foto e contenuti: fino a rimozione da parte dell’utente o dello staff.</li>
       </ul>
 
       <h2>7. Condivisione e terze parti</h2>
-      <p>Non vendiamo i dati a terzi. Potremmo condividere dati con:</p>
       <ul>
-        <li>fornitori di servizi tecnici (hosting, servizi di analytics, email delivery) che operano come responsabili esterni del trattamento;</li>
-        <li>autorità pubbliche, se richiesto per legge o per l'esercizio dei diritti di difesa;</li>
-        <li>il personale autorizzato interno (es. staff con ruolo di moderazione) quando necessario per le finalità del servizio.</li>
+        <li>servizi cloud e backend (Firebase / Google Cloud);</li>
+        <li>servizi di analisi tecnica;</li>
+        <li>staff autorizzato per moderazione;</li>
+        <li>autorità pubbliche se richiesto dalla legge.</li>
       </ul>
-      <p>Ogni fornitore è vincolato da un contratto che limita l’uso dei dati e impone misure di protezione.</p>
 
       <h2>8. Trasferimenti internazionali</h2>
-      <p>Se i dati vengono trasferiti al di fuori dell'UE, lo faremo solo verso Paesi che garantiscono un livello di protezione adeguato o tramite strumenti contrattuali conformi al GDPR (es. clausole tipo della Commissione Europea).</p>
-
-      <h2>9. Cookies e tecnologie simili</h2>
-      <p>Usiamo cookie tecnici necessari al funzionamento del servizio e cookie di performance/analitici (es. Google Analytics). Puoi gestire le preferenze cookie dal tuo browser; per dettagli consulta la nostra <a href="/cookie-policy">Cookie Policy</a>.</p>
-
-      <h2>10. Diritti dell'interessato</h2>
-      <p>Hai i diritti previsti dal GDPR: accesso, rettifica, cancellazione, limitazione del trattamento, opposizione, portabilità dei dati. Per esercitarli o per ottenere informazioni contatta:</p>
-      <p><strong>Email:</strong> <a href="mailto:privacy@friuliemergenze.it">privacy@friuliemergenze.it</a></p>
-      <p>Se ritieni che il trattamento non sia conforme, puoi presentare reclamo all’autorità di controllo competente (Garante per la protezione dei dati personali).</p>
-
-      <h2>11. Sicurezza dei dati</h2>
-      <p>Adottiamo misure tecniche e organizzative adeguate per proteggere i dati (accesso autenticato, crittografia dei canali, controlli di accesso). Tuttavia ricordiamo che nessun sistema è totalmente immune da rischi; in caso di violazione dei dati personali ti contatteremo quando richiesto dalla normativa.</p>
-
-      <h2>12. Minori</h2>
-      <p>La piattaforma non è pensata per minori di 12 anni. Se sei genitore/tutore e ritieni che abbiamo raccolto dati di un minore, contattaci per la rimozione.</p>
-
-      <h2>13. Modifiche alla presente informativa</h2>
-      <p>Potremmo aggiornare questa informativa. In caso di cambiamenti sostanziali pubblicheremo la nuova data di aggiornamento in cima alla pagina e, quando necessario, informeremo gli utenti per email o tramite la piattaforma.</p>
-
-      <h2>14. Contatti</h2>
-      <p>Per domande sul trattamento dei dati o per esercitare i tuoi diritti, scrivi a: <br>
-         <strong>Email:</strong> <a href="mailto:privacy@friuliemergenze.it">privacy@friuliemergenze.it</a>
+      <p>
+        I dati possono essere trattati su server situati anche al di fuori dell’Unione Europea quando si utilizzano
+        fornitori cloud internazionali. Il trasferimento avviene secondo i meccanismi contrattuali dichiarati dai fornitori,
+        ma il titolare non può garantire il pieno controllo sulla localizzazione fisica dei dati.
       </p>
 
-      <p class="muted">Questa informativa è fornita a titolo informativo e non sostituisce la consulenza legale. Verifica con il tuo consulente o il DPO eventuali adattamenti necessari al contesto operativo.</p>
+      <h2>9. Cookie</h2>
+      <p>
+        Sono utilizzati cookie tecnici e, se presenti, cookie analitici. Le preferenze possono essere gestite dal browser.
+        Per maggiori dettagli consultare la Cookie Policy del sito.
+      </p>
+
+      <h2>10. Diritti dell’utente</h2>
+      <p>
+        L’utente può richiedere accesso, rettifica o cancellazione dei dati scrivendo a
+        <a href="mailto:privacy@friuliemergenze.it">privacy@friuliemergenze.it</a>.
+        È possibile presentare reclamo al Garante per la protezione dei dati personali.
+      </p>
+
+      <h2>11. Sicurezza dei dati</h2>
+      <p>
+        Vengono adottate misure organizzative per limitare accessi non autorizzati, ma la sicurezza tecnica dipende in larga
+        parte dai fornitori dei servizi utilizzati. Nessun sistema connesso a Internet può essere considerato totalmente sicuro.
+      </p>
+
+      <h2>11-bis. Limitazioni tecniche della piattaforma</h2>
+      <p>
+        Parte della logica applicativa è eseguita lato client (browser) e il codice può essere ispezionato.
+        Alcune misure di sicurezza dipendono dalle regole dei database e dai servizi cloud utilizzati.
+      </p>
+
+      <h2>12. Minori</h2>
+      <p>Il servizio non è destinato a minori di 12 anni. In caso di dati raccolti per errore, contattare il titolare.</p>
+
+      <h2>13. Modifiche alla presente informativa</h2>
+      <p>La presente informativa può essere aggiornata. La data di aggiornamento verrà modificata in cima alla pagina.</p>
+
+      <h2>14. Contatti</h2>
+      <p>
+        Email: <a href="mailto:privacy@friuliemergenze.it">privacy@friuliemergenze.it</a>
+      </p>
 
       <footer>
-        <p>© 2025 Friuli Emergenze — MyFrEM</p>
+        <p>© 2026 Friuli Emergenze — MyFrEM</p>
         <p>
-          <a href="https://myfrem.friuliemergenze.it/login/signin">Login</a> · 
-          <a href="https://myfrem.friuliemergenze.it/login/signup">Registrati</a> · 
-          <a href="/privacy-policy" target="_blank">Privacy Policy</a> · 
-          <a href="https://friuliemergenze.it/contact-us" target="_blank">Contatti</a>
+          <a href="https://myfrem.friuliemergenze.it/login/signin">Login</a> ·
+          <a href="https://myfrem.friuliemergenze.it/login/signup">Registrati</a> ·
+          <a href="/privacy-policy">Privacy Policy</a> ·
+          <a href="https://friuliemergenze.it/contact-us">Contatti</a>
         </p>
       </footer>
+
     </main>
   </div>
 </body>
