--- a/login/reset-your-password/index.html
+++ b/login/reset-your-password/index.html
@@ -28,6 +28,6 @@
     <p id="success" class="success"></p>
   </div>
 
-  <script src="/login/app.js"></script>
+  <script type="module" src="/login/app.js"></script>
 </body>
 </html>
