--- a/staff/dashboard/index.html
+++ b/staff/dashboard/index.html
@@ -75,7 +75,7 @@
       </div>
     </div>
     <section class="activity">
-      <h2>Attività recenti</h2>
+      <h2>Attività recenti <a href="/staff/dashboard/activities/">(visualizza tutte)</a></h2>
       <ul id="recentActivityList">
       </ul>
     </section>
