--- a/staff/dashboard/users/index.html
+++ b/staff/dashboard/users/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://myfrem.friuliemergenze.it/staff/dashboard/management/">
+<meta http-equiv="refresh" content="0; url=/staff/dashboard/management/">
