--- a/staff/dashboard/index.html
+++ b/staff/dashboard/index.html
@@ -79,6 +79,10 @@
       <ul id="recentActivityList">
       </ul>
     </section>
+    <section class="activity">
+      <h2>Logins</h2>
+      <a href="/staff/dashboard/logins/" class="aclogins">Visualizza tutti i logins</a>
+    </section>
   </div>
 </body>
 </html>
